--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
        <div id="channels">
             <ul>
                 <li>#Summer <img src="https://ip.lfe.mw.tum.de/sections/star-o.png" alt="star pic"></li>
-                <li><a href="#">#BestPlayer<img src="https://ip.lfe.mw.tum.de/sections/star.png" alt="star pic"></a></li>
+                <li class="selected">#BestPlayer<img src="https://ip.lfe.mw.tum.de/sections/star.png" alt="star pic"></li>
                 <li>#SuperPower<img src="https://ip.lfe.mw.tum.de/sections/star-o.png"  alt="star pic"></li>
                 <li>#IphoneOrAndriod<img src="https://ip.lfe.mw.tum.de/sections/star.png"  alt="star pic"></li>
                 <li>#Foodies<img src="https://ip.lfe.mw.tum.de/sections/star-o.png"  alt="star pic"></li>
@@ -30,9 +30,9 @@
        </div>
        <!-- channels Buttons-->
        <div id="tap-bar">
-            <button><img src="https://ip.lfe.mw.tum.de/sections/lightbulb-o.png"  alt="lightbulb pic"><br> New</button>
-            <button><img src="https://ip.lfe.mw.tum.de/sections/fire.png" alt="fire pic"><br>Trending</button>
-            <button><img src="https://ip.lfe.mw.tum.de/sections/star.png" alt="star pic"><br>Favorites</button>
+            <button class="selected"><img src="https://ip.lfe.mw.tum.de/sections/lightbulb-o.png" alt="lightbulb pic">New</button>
+            <button><img src="https://ip.lfe.mw.tum.de/sections/fire.png" alt="fire pic">Trending</button>
+            <button><img src="https://ip.lfe.mw.tum.de/sections/star.png" alt="star pic">Favorites</button>
        </div>
    </div>
    <hr>
@@ -43,7 +43,7 @@
             <h1>#BestPlayer <small>by risfält.holk.järnväg </small><img src="https://ip.lfe.mw.tum.de/sections/star.png"></h1>
        </div>
        <!--#chat #metadata contains location, friday, day, and time -->
-       <div class="mssg-container" id="own">
+       <div class="mssg-container own">
             <h3><strong><a href="">risfält.holk.järnväg</a></strong> Fri, Sept 07, 17:13 <em>15 min left</em></h3>
             <p>Is it the right by fifa to take Messi out of the Top 3 players 2018?</p>  
             <button>+5 min</button>
